--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,6 +1,7 @@
 .Footer {
-    margin: 0;
-    padding: .5rem 0 .5rem 1.5rem;
+    margin: 0 auto;
+    max-width: 280px;
+    padding: .5rem 1rem .5rem 1.5rem;
     height: 100%;
     min-height: 2.5rem;
     display: flex;
@@ -15,8 +16,6 @@
 }
 @media only screen and (min-width:600px) {
     .Footer {
-        max-width: 472px;
-        margin: 0 auto;
-        padding: .5rem 0;
+        padding: 2.5rem 0;
     }
 }
